force-app/main/default/objects/sugati__Margin__c/sugati__Margin__c.object-meta.xml
<CustomObject>
    <label>Margin</label>
    <nameField>
        <displayFormat>M-{0000000000}</displayFormat>
        <label>Margin ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Margins</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>