force-app/main/default/objects/sugati__Margin__c/fields/sugati__M_Country__c.field-meta.xml
<CustomField>
    <fullName>sugati__M_Country__c</fullName>
    <label>Country</label>
    <referenceTo>sugati__Country__c</referenceTo>
    <relationshipLabel>Margins</relationshipLabel>
    <relationshipName>Margins</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>