force-app/main/default/objects/sugati__Margin__c/fields/sugati__M_Margin__c.field-meta.xml
<CustomField>
    <fullName>sugati__M_Margin__c</fullName>
    <label>Margin</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>