force-app/main/default/objects/sugati__Margin__c/fields/sugati__M_Travel_From__c.field-meta.xml
<CustomField>
    <fullName>sugati__M_Travel_From__c</fullName>
    <label>Travel From</label>
    <type>Date</type>
</CustomField>