force-app/main/default/objects/sugati__Margin__c/fields/sugati__M_Travel_To__c.field-meta.xml
<CustomField>
    <fullName>sugati__M_Travel_To__c</fullName>
    <label>Travel To</label>
    <type>Date</type>
</CustomField>