force-app/main/default/objects/sugati__Margin__c/fields/sugati__S_M_Agency_Margin__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_M_Agency_Margin__c</fullName>
    <label>Agency Margin</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>