force-app/main/default/objects/sugati__Margin__c/fields/sugati__S_M_Markup__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_M_Markup__c</fullName>
    <description>Default Markup Percentage</description>
    <inlineHelpText>Default Markup Percentage</inlineHelpText>
    <label>Markup</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>