force-app/main/default/objects/sugati__Margin__c/listViews/sugati__All.listView-meta.xml
<ListView>
    <fullName>sugati__All</fullName>
    <columns>NAME</columns>
    <columns>sugati__M_Country__c</columns>
    <columns>sugati__M_Margin__c</columns>
    <columns>sugati__M_Book_From__c</columns>
    <columns>sugati__M_Book_To__c</columns>
    <columns>sugati__M_Travel_From__c</columns>
    <columns>sugati__M_Travel_To__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>